// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form/Select Basic smoke-test 1`] = `
<button type="button"
        role="combobox"
        aria-controls="radix-:r0:"
        aria-expanded="false"
        aria-autocomplete="none"
        dir="ltr"
        data-state="closed"
        class="cmpui_select__root"
>
  <span style="pointer-events: none;">
    Option 1
  </span>
  <svg xmlns="http://www.w3.org/2000/svg"
       height="16"
       viewbox="0 -960 960 960"
       width="16"
       fill="currentColor"
       aria-hidden="true"
  >
    <path d="M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z">
    </path>
  </svg>
  <label class="cmpui_select__label">
    Label
  </label>
</button>
`;

exports[`Form/Select Disabled smoke-test 1`] = `
<button type="button"
        role="combobox"
        aria-controls="radix-:r5:"
        aria-expanded="false"
        aria-autocomplete="none"
        dir="ltr"
        data-state="closed"
        disabled
        data-disabled
        class="cmpui_select__root"
>
  <span style="pointer-events: none;">
    Option 1
  </span>
  <svg xmlns="http://www.w3.org/2000/svg"
       height="16"
       viewbox="0 -960 960 960"
       width="16"
       fill="currentColor"
       aria-hidden="true"
  >
    <path d="M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z">
    </path>
  </svg>
  <label class="cmpui_select__label">
    Label
  </label>
</button>
`;

exports[`Form/Select DisabledItem smoke-test 1`] = `
<button type="button"
        role="combobox"
        aria-controls="radix-:ra:"
        aria-expanded="false"
        aria-autocomplete="none"
        dir="ltr"
        data-state="closed"
        class="cmpui_select__root"
>
  <span style="pointer-events: none;">
    Option 1
  </span>
  <svg xmlns="http://www.w3.org/2000/svg"
       height="16"
       viewbox="0 -960 960 960"
       width="16"
       fill="currentColor"
       aria-hidden="true"
  >
    <path d="M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z">
    </path>
  </svg>
  <label class="cmpui_select__label">
    Label
  </label>
</button>
`;

exports[`Form/Select Fonts smoke-test 1`] = `
<button type="button"
        role="combobox"
        aria-controls="radix-:rf:"
        aria-expanded="false"
        aria-autocomplete="none"
        dir="ltr"
        data-state="closed"
        class="cmpui_select__root"
>
  <span style="pointer-events: none;">
    <div style="font-family: Roboto;">
      Roboto
    </div>
  </span>
  <svg xmlns="http://www.w3.org/2000/svg"
       height="16"
       viewbox="0 -960 960 960"
       width="16"
       fill="currentColor"
       aria-hidden="true"
  >
    <path d="M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z">
    </path>
  </svg>
  <label class="cmpui_select__label">
    font
  </label>
</button>
`;
